Fix layout shift issues

--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -1,26 +1,31 @@
 @import 'variables';
 
 @font-face {
-  font-family: 'Plus Jakarta Sans';
-  font-style: normal;
-  font-weight: 200 800;
-  src: url('/fonts/PlusJakartaSans/PlusJakartaSans-Variable.ttf') format('truetype');
+	font-family: 'Plus Jakarta Sans';
+	font-style: normal;
+	font-weight: 200 800;
+	src: url('/fonts/PlusJakartaSans/PlusJakartaSans-Variable.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: 'Monigue';
-  font-style: normal;
-  font-weight: 700;
-  src: url('/fonts/Monigue/Monigue.woff2') format('woff2');
+	font-family: 'Monigue';
+	font-style: normal;
+	font-weight: 700;
+	src: url('/fonts/Monigue/Monigue.woff2') format('woff2');
 }
 
 body {
-  font-family: $font-body;
-  line-height: $line-height-8;
-  font-size: $font-size-8;
+	font-family: $font-body;
+	line-height: $line-height-8;
+	font-size: $font-size-8;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $font-heading;
-  line-height: $line-height-8;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: $font-heading;
+	line-height: $line-height-8;
 }
