--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,43 +1,42 @@
 @import 'variables';
 
 @mixin split {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 @mixin h-gap($gap) {
-  display: flex;
-  flex-direction: row;
-  gap: $gap;
+	display: flex;
+	flex-direction: row;
+	gap: $gap;
 }
 
 @mixin h-gap-centered($gap) {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: $gap;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: $gap;
 }
 
 @mixin v-gap($gap) {
-  display: flex;
-  flex-direction: column;
-  gap: $gap;
+	display: flex;
+	flex-direction: column;
+	gap: $gap;
 }
 
 @mixin v-gap-centered($gap) {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: $gap;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: $gap;
 }
 
 @mixin centered {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: grid;
+	place-items: center;
 }
 
 @mixin transition($duration, $properties...) {
-  transition: $properties $transition-timing $duration;
+	transition: $properties $transition-timing $duration;
 }
