--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -43,7 +43,6 @@ h3,
 h4,
 h5,
 h6 {
-	font: inherit;
 	/* Low browser support but not incredibly important */
 	text-wrap: balance;
 }
